feat: add docs for pack draft handlers
